Improve cancellation handling in browser codegen

--- a/mpst_ts/codegen/generator/browser/browser_v2/templates/receive_component.tsx.j2
+++ b/mpst_ts/codegen/generator/browser/browser_v2/templates/receive_component.tsx.j2
@@ -37,7 +37,8 @@ export default abstract class S{{ state.id }}<
 >
 {
 
-  componentDidMount() {
+  constructor(props: _P & P) {
+    super(props);
     this.props.register(Roles.{{ state.role }}, this.handle.bind(this));
   }
 
