--- a/mpst_ts/codegen/generator/browser/browser_v2/templates/terminal_component.tsx.j2
+++ b/mpst_ts/codegen/generator/browser/browser_v2/templates/terminal_component.tsx.j2
@@ -1,11 +1,22 @@
 import React from "react";
 
+type P = {
+  terminate: () => void,
+}
+
 export default abstract class S{{ state }}<
   _P = {},
   _S = {},
   _SS = any
 > extends React.Component<
-  _P,
+  _P & P,
   _S,
   _SS
-> {}
+> {
+
+  constructor(props: _P & P) {
+    super(props);
+    this.props.terminate();
+  }
+
+}
